Cap2025/src/edu/najah/cap/advance/examples/exc3/correct/TrimFilter.java
package edu.najah.cap.advance.examples.exc3.correct;

public class TrimFilter implements Filter {

    public String applyFilter(String result) {
        return result.trim();//second filter
    }
}
