Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/SalahFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public class SalahFilter implements ISalahFilter {
    public String applySalah(String salah){
        return "Salah " + salah;
    }
}
